# batect-spark-python

./: .gitignore  Dockerfile  Makefile  README.md  batect  go.sh  pyproject.toml
scripts/mac_or_linux/: install-with-colima.sh
src/data_transformations/citibike/: distance_transformer.py  ingest.py
src/data_transformations/word_count/: word_count_transformer.py
src/jobs/: citibike_distance_calculation.py  citibike_ingest.py  word_count.py
tests/integration/: test_distance_transformer.py  test_ingest.py  test_word_count.py
tests/unit/: test_ingest.py
