[tool.poetry]
name = "batect-spark-python"
version = "0.1.0"
description = "Data Transformations with Pyspark"
authors = ["Luis Ricardo Sabino <ricardosabino@gmail.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^1.2.4"
pyarrow = "^9.0.0"
pyspark = "^3.1.1"
python = "^3.9"
coverage = "^6.4.4"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^7.1.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
